--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       loadSidebar: true,
       subMaxLevel: 3,
       search: { noData: '未找到', paths: 'auto', placeholder: '搜索地图/道具/关键字' },
-      alias: { '/': '/' }
+      alias: { '/': '/': '/' }
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
