--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CS2 道具描点速查</title>
+  <title>CS2大学习</title>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css" />
   <link rel="stylesheet" href="assets/style.css" />
 </head>
@@ -11,7 +11,7 @@
   <div id="app">加载中…</div>
   <script>
     window.$docsify = {
-      name: 'CS2 道具速查',
+      name: 'CS2大学习',
       repo: '',
       loadSidebar: true,
       subMaxLevel: 3,
