feat: add edit this page link for docs

--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
       loadSidebar: true,
       subMaxLevel: 3,
       search: { noData: '未找到', paths: 'auto', placeholder: '搜索地图/道具/关键字' },
-      alias: { '/': '/' }
+      alias: { '/': '/' },
+      editLink: {
+        repo: '',
+        branch: 'main',
+        text: '在 GitHub 上编辑本页'
+      }
     }
   </script>
+  <script src="assets/edit-this-page.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 </body>
